--- a/app/styles/DeskSetup.css
+++ b/app/styles/DeskSetup.css
@@ -1,3 +1,4 @@
+/* app/styles/desksetup.css */
 body {
     overflow: hidden; /* Hide overflow from connectors */
 }
@@ -17,8 +18,6 @@ body {
     width: 30vw;
     height: 28.75vh;
     background-color: #2c2c2a;
-    border: 4px solid black;
-    border-bottom-width: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     margin: 5px;
     position: relative;
@@ -55,7 +54,6 @@ body {
     width: 100%;
     height: 100%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.8) inset; /* Inner bezel shadow */
-    z-index: 3;
 }
 
 /* Reflection effect for the screen */
